--- a/FlexBox.css
+++ b/FlexBox.css
@@ -31,12 +31,9 @@ nav a {
   font-weight: bold;
 }
 
-.ShopMenu {
-  padding-top: 10px;
-  list-style-type: none;
-}
-
 .dropdown-content {
+  padding-top: 10px;
+  list-style-type: none
   background-color: rgb(39, 186, 255);
   border-bottom-right-radius: 8px;
   border-bottom-left-radius: 8px;
