--- a/FlexBox.css
+++ b/FlexBox.css
@@ -31,7 +31,10 @@ nav a {
   font-weight: bold;
 }
 
-
+ul {
+  list-style: none;
+  padding-inline-start: 0;
+}
 .dropdown-content {
   padding-top: 10px;
   list-style-type: none;
