--- a/FlexBoxS.css
+++ b/FlexBoxS.css
@@ -31,6 +31,11 @@ nav a {
   font-weight: bold;
 }
 
+ul {
+  list-style: none;
+  padding-inline-start: 0;
+}
+
 .dropdown-content {
   padding-top: 10px;
   list-style-type: none
